# vigir_ihmc_integration

./: README.md
vigir_ihmc_control_integration/: CMakeLists.txt  package.xml
vigir_ihmc_control_integration/config/: arm_controllers.yaml
vigir_ihmc_control_integration/include/vigir_ihmc_control_integration/: ihmc_arm_action_server.h  permutation_helper.h
vigir_ihmc_control_integration/launch/: ihmc_arm_control_action_servers.launch
vigir_ihmc_control_integration/src/: ihmc_arm_action_node.cpp  ihmc_arm_action_server.cpp
vigir_ihmc_footstep_integration/: .gitignore  CMakeLists.txt  CMakeLists.txt~  package.xml
vigir_ihmc_footstep_integration/config/: ihmc_footstep_config.yaml  vigir_footstep_config.yaml
vigir_ihmc_footstep_integration/include/vigir_ihmc_footstep_integration/: ihmc_footstep_server.h
vigir_ihmc_footstep_integration/launch/: ihmc_footstep_server.launch
vigir_ihmc_footstep_integration/src/: ihmc_footstep_node.cpp  ihmc_footstep_server.cpp
